@@ -33,6 +33,7 @@ list("!" = function(e1)
 , ".C" = FALSE
 , ".Call" = FALSE
 , ".Fortran" = FALSE
+# not internally generic
 , ":" = function(e1, e2)
 {
     standardGeneric(":")
@@ -125,11 +126,13 @@ list("!" = function(e1)
     standardGeneric("rep")
 }
 , "substitute" = FALSE
+# not primitive
 , "trace" = function(what = character(), tracer = TRUE, exit.tracer, at = numeric(), print
 	 = TRUE, signature)
 {
     standardGeneric("trace")
 }
+# not primitive
 , "untrace" = function(what)
 {
     standardGeneric("untrace")
@@ -201,19 +204,10 @@ list("!" = function(e1)
 , "is.double" = FALSE
 , "is.environment" = FALSE
 , "is.expression" = FALSE
-, "is.finite" = function(x)
-{
-    standardGeneric("is.finite")
-}
+, "is.finite" = FALSE
 , "is.function" = FALSE
-, "is.infinite" = function(x)
-{
-    standardGeneric("is.infinite")
-}
-, "is.integer" = function(x)
-{
-    standardGeneric("is.integer")
-}
+, "is.infinite" = FALSE
+, "is.integer" = FALSE
 , "is.language" = FALSE
 , "is.list" = FALSE
 , "is.logical" = FALSE
@@ -265,6 +259,7 @@ list("!" = function(e1)
 , ".Primitive" = FALSE
 , "baseenv" = FALSE
 , "break" = FALSE
+# not internal generic
 , "debug" = function(fun)
 {
     standardGeneric("debug")
@@ -286,6 +281,7 @@ list("!" = function(e1)
 , "proc.time" = FALSE
 , "repeat" = FALSE
 , "return" = FALSE
+# not internal generic
 , "undebug" = function(fun)
 {
     standardGeneric("undebug")
@@ -398,8 +394,82 @@ setGenericForPrimitive <- function(f, value, where = topenv(parent.frame()),
 
 .ExcludePrimitiveGenerics <-
     c(
-      "is.null",
-      "is.primitive",
+      ".C",
+      ".Call",
+      ".Call.graphics",
+      ".External",
+      ".External.graphics",
+      ".Fortran",
+      ".Internal",
+      ".Primitive",
+      ".primTrace",
+      ".primUntrace",
+      ".subset",
+      ".subset2",
+      "UseMethod",
+      "as.call",
+      "as.environment",
+      "attr",
+      "attr<-",
+      "attributes",
+      "attributes<-",
+      "baseenv",
+      "browser",
+      "as.call",
+      "call",
+      "class",
+      "class<-",
+      "debug",
+      "emptyenv",
+      "environment<-",
+      "expression",
+      "gc.time",
+      "globalenv",
+      "interactive",
+      "invisible",
+      "is.atomic",
+      "is.call",
+      "is.character",
+      "is.complex",
+      "is.double",
+      "is.environment",
+      "is.expression",
+      "is.finite",
       "is.function",
-      "is.object"
+      "is.infinite",
+      "is.integer",
+      "is.language",
+      "is.list",
+      "is.logical",
+      "is.name",
+      "is.null",
+      "is.function",
+      "is.object",
+      "is.pairlist",
+      "is.raw",
+      "is.real",
+      "is.recursive",
+      "is.single",
+      "is.symbol",
+      "list",
+      "missing",
+      "nargs",
+      "oldClass",
+      "oldClass",
+      "oldClass<-",
+      "on.exit",
+      "pos.to.env",
+      "proc.time",
+      "quote",
+      "retracemem",
+      "seq.int",
+      "seq_along",
+      "seq_len",
+      "standardGeneric",
+      "storage.mode<-",
+      "substitute",
+      "tracemem",
+      "unclass",
+      "undebug",
+      "untracemem"
       )
