@@ -145,7 +145,7 @@ density.default <-
                         ifelse(abs(kords) < a, pi/4*cos(pi*kords/(2*a))/a, 0)}
                     )
     kords <- fft( fft(y)* Conj(fft(kords)), inv=TRUE)
-    kords <- Re(kords)[1:n]/length(y)
+    kords <- pmax.int(0, Re(kords)[1:n]/length(y))
     xords <- seq(lo, up, length = n)
 #    keep <- (xords >= from) & (xords <= to)
     x <- seq(from, to, length = n.user)
